--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <h1>
-                Login page
-            </h1>
+            <h3>
+                Please login
+            </h3>
 
             <p th:if="${loginError}" class="error">
                 Wrong user or password
