--- a/src/main/resources/templates/samples/table.html
+++ b/src/main/resources/templates/samples/table.html
@@ -58,8 +58,7 @@
                 {{ status.value }}
             </td>
             <td>
-                <a href="/samples/show/{{ barcode }}/">
-                    <span class="glyphicon glyphicon-eye-open"></span>
+                <a href="/samples/show/{{ barcode }}/" class="label label-primary">
                     View
                 </a>
             </td>
