--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Aker</a>
+            <a class="navbar-brand" href="/">Aker</a>
         </div>
 
         <div class="navbar-collapse collapse">
