--- a/src/main/resources/templates/samples/index.html
+++ b/src/main/resources/templates/samples/index.html
@@ -8,7 +8,7 @@
 <div class="container">
 
     <div class="page-header">
-        <h2>Samples</h2>
+        <h3>Samples</h3>
     </div>
 
     <form th:action="@{/samples/group/}" th:object="${groupRequest}" method="POST" role="form">
@@ -209,8 +209,8 @@
                     {{ status.value }}
                 </td>
                 <td>
-                    <a href="/samples/show/{{ barcode }}">
-                        view
+                    <a href="/samples/show/{{ barcode }}" class="label label-primary">
+                        View
                     </a>
                 </td>
             </tr>
