UI Improvements, other minor fixes

--- a/src/main/resources/templates/groups/table.html
+++ b/src/main/resources/templates/groups/table.html
@@ -23,7 +23,7 @@
                     Sample Count
                 </th>
                 <th>
-                    Details
+                    Actions
                 </th>
             </tr>
             <tr class="jqp-append-before" th:id="${appendBeforeId}">
