--- a/src/main/resources/templates/samples/table.html
+++ b/src/main/resources/templates/samples/table.html
@@ -26,6 +26,7 @@
                     Status
                 </th>
                 <th>
+                    Actions
                 </th>
             </tr>
             <tr class="jqp-append-before" th:id="${appendBeforeId}">
