--- a/src/main/resources/templates/work/order.html
+++ b/src/main/resources/templates/work/order.html
@@ -116,7 +116,7 @@
 
             <p>
                 <a th:href="@{/work/csv}" class="btn btn-default">Generate CSV</a>
-                <button type="submit" class="btn btn-primary submit" disabled="disabled" id="submit-ws">
+                <button type="submit" class="btn btn-primary submit" disabled="disabled" id="submit">
                     Submit
                 </button>
             </p>
