--- a/src/main/resources/templates/groups/edit.html
+++ b/src/main/resources/templates/groups/edit.html
@@ -42,19 +42,10 @@
                     </div>
                 </div>
 
-                <div class="children">
+                <div class="children" th:if="*{!children.isEmpty()}">
                     <h4>Sub Groups</h4>
 
-                    <div th:object="${group.children}" th:if="*{children == null}">
-                        <!--<label for="subGroup">Choose group</label>-->
-                        <!--<select th:field="${id}" id="subGroup" class="form-control">-->
-                            <!--<option th:each="group : ${groups}"-->
-                                    <!--th:value="${group.id}"-->
-                                    <!--th:text="${group.name}"></option>-->
-                        <!--</select>-->
-                    </div>
-
-                    <table class="table table-condensed" th:if="*{children != null}">
+                    <table class="table table-condensed">
                         <thead>
                         <tr>
                             <th><span class="glyphicon glyphicon-remove"></span></th>
