--- a/src/main/resources/templates/groups/index.html
+++ b/src/main/resources/templates/groups/index.html
@@ -33,7 +33,7 @@
                         <th>
                             Sample Count
                             <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip"
-                                  title="Excluding children groups'"></span>
+                                  title="Excluding subgroups'"></span>
                         </th>
                         <th>
                             Details
