--- a/src/main/resources/templates/groups/show.html
+++ b/src/main/resources/templates/groups/show.html
@@ -31,12 +31,12 @@
                 </p>
             </div>
 
-            <div class="children" th:if="*{children != null}">
+            <div class="subgroups" th:if="*{!subgroups.isEmpty()}">
                 <h4>Sub Groups</h4>
 
                 <ul>
-                    <li th:each="child : *{children}">
-                        <a href="" th:text="${child.name}" th:href="@{/groups/show/{groupId}(groupId = ${child.id})}">
+                    <li th:each="subgroup : *{subgroups}">
+                        <a href="" th:text="${subgroup.name}" th:href="@{/groups/show/{groupId}(groupId = ${subgroup.id})}">
                         </a>
                     </li>
                 </ul>
@@ -65,13 +65,13 @@
                 <div th:include="samples/table :: table (*{'append-' + id}, *{'load-' + id}, *{'meta-' + id}, ${false})"></div>
             </div>
 
-            <div th:if="*{!children.isEmpty()}">
-                <div th:each="child : *{children}">
+            <div th:if="*{!subgroups.isEmpty()}">
+                <div th:each="subgroup : *{subgroups}">
                     <h4 class="text-muted">
-                        Samples from: <span th:text="${child.name}"></span>
+                        Samples from: <span th:text="${subgroup.name}"></span>
                     </h4>
 
-                    <div th:include="samples/table :: table (${'append-' + child.id}, ${'load-' + child.id}, ${'meta-' + child.id}, ${false})"></div>
+                    <div th:include="samples/table :: table (${'append-' + subgroup.id}, ${'load-' + subgroup.id}, ${'meta-' + subgroup.id}, ${false})"></div>
                 </div>
             </div>
         </div>
@@ -81,41 +81,6 @@
 <div th:include="fragments/common :: footer"></div>
 
 <script th:replace="samples/table :: template (${false})"></script>
-
-<div class="modal fade" id="add-subgroup">
-    <div class="modal-dialog">
-
-        <form th:action="@{/groups/update/{id}/add-subgroup(id = ${group.id})}" th:method="PUT" th:object="${subgroup}"
-              role="form">
-
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">Add Subgroup</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="subGroup">Choose group</label>
-                        <select th:field="*{id}" id="subGroup" class="form-control">
-                            <option th:each="group : ${groups}"
-                                    th:value="${group.id}"
-                                    th:text="${group.name}"></option>
-                        </select>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <input type="submit" class="btn btn-primary" value="Confirm"/>
-                </div>
-            </div>
-            <!-- /.modal-content -->
-        </form>
-    </div>
-    <!-- /.modal-dialog -->
-</div>
-<!-- /.modal -->
 
 <script type="application/javascript" th:src="@{/js/groups/show.js}"></script>
 
